--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,6 @@
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="shortcut icon" href="img/logo.png">
-		<script type="text/javascript" src="js/app.js"></script>
 		<title>Discipulado</title>
 	</head>
 	<body>
@@ -16,23 +15,32 @@
 			<div id="menu">
 				<div class="cover"></div>
 				<ul>
-					<li class="active"><span class="icon book"></span>Minhas Apostilas</li>
-					<li><span class="icon build"></span>Configurações</li>
-					<li><span class="icon help"></span>Sobre</li>
+					<li class="active"><span class="icon book"></span><a href="#home">Minhas Apostilas</a></li>
+					<li><span class="icon build"></span><a href="#config">Configurações</a></li>
+					<li><span class="icon help"><a href="#help"></span>Sobre</a></li>
 				</ul>
 			</div>
 			<header>
-				<a href="#" class="menu"></a>
-				<a href="#" class="icon refresh right"></a>
+				<a class="menu"></a>
+				<a class="icon refresh right"></a>
 				<h1>Title</h1>
 				<div class="clear"></div>
 			</header>
-			<article>
-				Hello, world!
-			</article>
+			<div id="main">
+				
+				<div id="home">
+					<h2>Minhas Apostilas</h2>
+				</div>
+				<div id="config">
+					<h2>Configurações</h2>
+				</div>
+				<div id="help">
+					<h2>Sobre</h2>
+				</div>
 
+			</div>
 		</div>
 
-
+	<script type="text/javascript" src="js/app.js"></script>
 	</body>
 </html>
