--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<script type="text/javascript" src="js/jquery.min.js"></script>
+		<script type="text/javascript" src="js/velocity.min.js"></script>
+		<script type="text/javascript" src="js/hammer.min.js"></script>
+		<script type="text/javascript" src="js/bigslide.min.js"></script>
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="shortcut icon" href="img/logo.png">
 		<title>Discipulado</title>
@@ -12,35 +15,25 @@
 
 
 		<div id="outer">
-			<div id="menu">
+			<nav id="menu">
 				<div class="cover"></div>
 				<ul>
 					<li class="active"><span class="icon book"></span><a href="#home">Minhas Apostilas</a></li>
 					<li><span class="icon build"></span><a href="#config">Configurações</a></li>
 					<li><span class="icon help"><a href="#help"></span>Sobre</a></li>
 				</ul>
-			</div>
+			</nav>
 			<header>
-				<a class="menu"></a>
-				<a class="icon refresh right"></a>
+				<a class="menu" id="menu-toggle"></a>
 				<h1>Title</h1>
 				<div class="clear"></div>
 			</header>
 			<div id="main">
 				
-				<div id="home">
-					<h2>Minhas Apostilas</h2>
-				</div>
-				<div id="config">
-					<h2>Configurações</h2>
-				</div>
-				<div id="help">
-					<h2>Sobre</h2>
-				</div>
-
 			</div>
 		</div>
-
+	<script type="text/javascript" src="js/pages.js"></script>
+	<script type="text/javascript" src="js/books.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	</body>
 </html>
