--- a/app/index.html
+++ b/app/index.html
@@ -18,18 +18,18 @@
 			<nav id="menu">
 				<div class="cover"></div>
 				<ul>
-					<li class="active"><span class="icon book"></span><a href="#home">Minhas Apostilas</a></li>
-					<li><span class="icon build"></span><a href="#config">Configurações</a></li>
-					<li><span class="icon help"><a href="#help"></span>Sobre</a></li>
+					<li class="active"><a href="#home"><span class="icon book"></span>Minhas Apostilas</a></li>
+					<li><a href="#config"><span class="icon build"></span>Configurações</a></li>
+					<li><a href="#help"><span class="icon help"></span>Sobre</a></li>
 				</ul>
 			</nav>
 			<header>
 				<a class="menu" id="menu-toggle"></a>
-				<h1>Title</h1>
+				<h1>Discipulado</h1>
 				<div class="clear"></div>
 			</header>
 			<div id="main">
-				
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing.</p>
 			</div>
 		</div>
 	<script type="text/javascript" src="js/pages.js"></script>
