Sistema de paginacao

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,25 @@
 				<div class="clear"></div>
 			</header>
 			<div id="main">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing.</p>
+				<ul class="home">
+					<li><a href="books/book1.html">Book1</a>
+						<ul>
+							<li><a href="books/book1.html#chapter1">Book1: Chapter 1</a></li>
+							<li><a href="books/book1.html#chapter2">Book1: Chapter 2</a></li>
+							<li><a href="books/book1.html#chapter3">Book1: Chapter 3</a></li>
+						</ul>
+					</li>
+					<li><a href="books/book2.html">Book2</a>
+						<ul>
+							<li><a href="books/book2.html#chapter1">Book2: Chapter 1</a></li>
+							<li><a href="books/book2.html#chapter2">Book2: Chapter 2</a></li>
+							<li><a href="books/book2.html#chapter3">Book2: Chapter 3</a></li>
+							<li><a href="books/book2.html#chapter4">Book2: Chapter 4</a></li>
+							<li><a href="books/book2.html#chapter5">Book2: Chapter 5</a></li>
+						</ul>
+					</li>
+				</ul>
+				<div id="book"></div>
 			</div>
 		</div>
 	<script type="text/javascript" src="js/pages.js"></script>
