Ajustes do reader

--- a/app/index.html
+++ b/app/index.html
@@ -17,22 +17,28 @@
 			<nav id="menu">
 				<div class="cover"></div>
 				<ul>
-					<li class="active"><a href="#home"><span class="icon dashboard"></span>Home</a></li>
+					<li class="active"><a href="#home"><span class="icon dashboard"></span>Início</a></li>
 					<li><a href="#settings"><span class="icon settings"></span>Configurações</a></li>
 					<li><a href="#about"><span class="icon feedback"></span>Sobre</a></li>
 				</ul>
 			</nav>
 			<header>
 				<a class="menu" id="menu-toggle"></a>
+				<a class="icon arrow-left left" id="back" href="#home"></a>
+				<a class="icon list right" id="index" href="#index"></a>
 				<h1>Discipulado</h1>
 				<div class="clear"></div>
 			</header>
 			<div id="main">
-				<div id="home" title="Discipulado"></div>
+				<div id="home" title="Minhas Apostilas"></div>
 				<div id="settings" title="Configurações">Settings</div>
 				<div id="about" title="Sobre">About</div>
 				<div id="book"></div>
 			</div>
+			<footer>
+				<div id="next"></div>
+				<div id="previous"></div>
+			</footer>
 		</div>
 	<script type="text/javascript" src="js/pages.js"></script>
 	<script type="text/javascript" src="js/books.js"></script>
