Criado sistema de indice

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,6 @@
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="js/velocity.min.js"></script>
 		<script type="text/javascript" src="js/hammer.min.js"></script>
-		<script type="text/javascript" src="js/bigslide.min.js"></script>
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="shortcut icon" href="img/logo.png">
 		<title>Discipulado</title>
@@ -25,7 +24,7 @@
 			<header>
 				<a class="menu" id="menu-toggle"></a>
 				<a class="icon arrow-left left" id="back" href="#home"></a>
-				<a class="icon list right" id="index" href="#index"></a>
+				<a class="icon list right" id="index-toggle" href="#index"></a>
 				<h1>Discipulado</h1>
 				<div class="clear"></div>
 			</header>
@@ -33,6 +32,11 @@
 				<div id="home" title="Minhas Apostilas"></div>
 				<div id="settings" title="Configurações">Settings</div>
 				<div id="about" title="Sobre">About</div>
+				<div id="index">
+					<span class="close"></span>
+					<h3>Sumário</h3>
+					<ul></ul>
+				</div>
 				<div id="book"></div>
 			</div>
 			<footer>
