Ajustes das cores dos icones

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,14 @@
 			</header>
 			<div id="main">
 				<div id="home" title="Minhas Apostilas"></div>
-				<div id="settings" title="Configurações">Settings</div>
+				<div id="settings" title="Configurações">
+					
+					<input type="text" placeholder="Lorem Ipsum" />
+					<input type="text" placeholder="Lorem Ipsum" />
+					<input type="text" placeholder="Lorem Ipsum" />
+					<button>salvar</button>
+
+				</div>
 				<div id="about" title="Sobre">About</div>
 				<div id="index">
 					<span class="close"></span>
