--- a/app/books/book1.html
+++ b/app/books/book1.html
@@ -1,20 +1,81 @@
-<div class="chapter" id="chapter1">
-	<h3>Capítulo 1</h3>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+<div class="article" id="chapter1">
+	<h3>O Propósito Eterno de Deus</h3>
+	<p>Este é um tema básico, fundamental. Devemos receber totalmente em nossos corações as verdades aqui contidas. Não pode ser um mero estudo de uma apostila. Deve tomar conta de todo o nosso ser. Mente e coração devem estar tomados do conhecimento da glória que há no propósito do Senhor. O propósito (alvo, meta) é que vai direcionar todo o nosso comportamento, trabalho, ênfase, enfoque e maneira de agir. Se quisermos verdadeiramente cooperar com Deus, devemos conhecer bem seus desejos, seu propósito, seu coração.</p>
+	<p>Tudo o que fizermos, só terá valor eterno, na medida em que cooperar com o propósito de Deus.</p>
 </div>
-<div class="chapter" id="chapter2">
-	<h3>Capítulo 2</h3>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<div class="article" id="chapter2">
+	<h3>Um erro muito comum</h3>
+	<p>Por anos, muitos cristãos tem vivido sem conhecer qual é o propósito (objetivo) de Deus para com suas vidas. Muitos tem crido, equivocadamente, que nossa meta como cristãos é chegar aos céus. Baseiam-se para isso em textos como os de <a data-verse="1tm2:3-4" class="verse">I Timóteo 2:3-4</a>; <a data-verse="2pe3:9" class="verse">II Pedro 3:9</a> e ainda <a data-verse="jo3:16" class="verse">João 3:16</a>. Vendo a Bíblia com um enfoque humanista, (isto é, o homem no centro), concluem que o propósito de Deus é a salvação dos homens. Tudo gira em torno do homem e de suas necessidades.</p>
+
+	<p>Esta visão equivocada ocorreu porque sempre víamos o propósito de Deus começando com a queda do homem. Sendo assim, como o homem está perdido, a salvação do homem se tornou o centro do propósito eterno de Deus. Aqui estava o erro e aqui devia ser feita a correção. É claro que Deus quer salvar a todos os homens. Isto vemos claramente nos textos de <a data-verse="1tm2:3-4" class="verse">I Timóteo 2:3-4</a>; <a data-verse="2pe3:9" class="verse">II Pedro 3:9</a> e <a data-verse="jo3:16" class="verse">João 3:16</a>. Mas nós não devemos confundir aquilo que Deus deseja com o que é o seu propósito. O propósito de Deus não surgiu com a queda do homem, é algo que já estava em seu coração desde antes da fundação do mundo.</p>
+	
+	<blockquote>Como também nos elegeu nele antes da fundação do mundo, para que fôssemos santos e irrepreensíveis diante dele em amor; E nos predestinou para filhos de adoção por Jesus Cristo, para si mesmo, segundo o beneplácito de sua vontade, para louvor da glória de sua graça, pela qual nos fez agradáveis a si no Amado, em quem temos a redenção pelo seu sangue, a remissão das ofensas, segundo as riquezas da sua graça, eue Ele fez abundar para conosco em toda a sabedoria e prudência; Descobrindo-nos o mistério da sua vontade, segundo o seu beneplácito, que propusera em si mesmo, de tornar a congregar em Cristo todas as coisas, na dispensação da plenitude dos tempos, tanto as que estão nos céus como as que estão na terra; Nele, digo, em quem também fomos feitos herança, havendo sido predestinados, conforme o propósito daquele que faz todas as coisas, segundo o conselho da sua vontade; <b>Efésios 1:4-11</b></blockquote>
+
+	<p>Então podemos argumentar da seguinte forma: se antes da fundação do mundo Deus tinha o propósito de salvar o homem, e fez o homem para cumprir este propósito, então Deus é cúmplice do pecado. Deus necessitava que o homem pecasse para poder cumprir o seu propósito. Quando Deus disse: <em>"Não coma deste fruto"</em>, na verdade, Ele queria que o homem comesse e pecasse, e ficasse perdido e em trevas, para, então, poder cumprir com seu propósito de salvar os homens.</p>
+
+	<p>Tudo isso é uma grande contradição. É claro que Deus quer salvar os homens, mas isto foi necessário por causa da queda. Entretanto, necessitamos conhecer a primeira intenção de Deus, o propósito que Ele tinha em seu coração quando fez o homem, pois seu propósito é imutável.</p>
+	
+	<p>Deus não mudou de propósito por causa da queda!</p>
 </div>
-<div class="chapter" id="chapter3">
-	<h3>Capítulo 3</h3>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<div class="article" id="chapter3">
+	<h3>Qual a intenção de Deus ao criar o homem?</h3>
+	<blockquote>Também disse Deus: Façamos o homem a nossa imagem, conforme a nossa semelhança. <b>Gênesis 1:26</b>.
+	</blockquote>
+	<h4>O Propósito Original</h4>
+	<ol>
+		<li>A intenção de Deus ao criar o homem era de ter uma grande família de muitos filhos à sua própria imagem, e encher a terra com uma família que expressasse a sua glória e autoridade (<a data-verse="gn1:27-28" class="verse">Gênesis 1:27-28</a>).</li>
+		<li>Como Adão tinha sido criado à imagem de Deus, e cada ser se reproduzia segundo a sua própria espécie, quando Adão e Eva se multiplicassem, reproduziriam filhos a imagem de Deus.</li>
+	</ol> 	
+</div>
+<div class="article" id="chapter4">
+	<h3>Como o pecado interferiu?</h3>
+	<p>Todos nós conhecemos a triste história. O pecado de Adão foi uma intromissão violenta e diabólica no propósito de Deus. Por meio dele o homem se tornou culpado, alvo da ira de Deus, merecedor de castigo eterno, expulso da presença de Deus e sem comunhão com Ele.</p>
+	<blockquote>Porque o salário do pecado é a morte, mas o dom gratuito de Deus é a vida eterna, por Cristo Jesus nosso Senhor. <b>Romanos 6:23</b></blockquote>
+</div>
+<div class="article" id="chapter5">	
+	<h3>A Queda do Homem</h3>
+	<p>Mas houve uma conseqüência ainda maior. O problema não foi apenas que o homem se tornou culpado diante de Deus, mas também a sua própria natureza se <em>"estragou"</em>, se corrompeu. O homem perdeu a imagem de Deus, tornou-se numa outra criatura. Não era mais o mesmo homem, era um homem morto para Deus; inútil para cumprir seu propósito.</p>
+	<p>Já sabemos que cada ser se reproduz segundo a sua própria espécie. Portanto, quando Adão se corrompeu, toda a sua descendência ficou arruinada (<a data-verse="gn5:3" class="verse">Gênesis 5:3</a> e <a data-verse="rm5:12" class="verse">Romanos 5:12</a>).</p>
+</div>
+<div class="article" id="chapter6">
+	<h3>Deus desistiu do Seu Propósito?</h3>
+	<p>Embora o homem pecasse, Deus não mudou o Seu propósito inicial. Deus não tem diversos planos, nem muitos propósitos; não criou um novo alvo, nem abriu mão do que queria desde o princípio. Deus necessita agora criar uma nova raça, porque todos os descendentes do primeiro homem ficaram inúteis para o seu propósito. Como fez isso? </p>
+	<blockquote>
+		O primeiro homem, Adão, foi feito ser vivente. O último Adão, porém, é espírito vivificante. Mas não é primeiro o espiritual e, sim, o natural; depois o espiritual. O primeiro homem, formado da terra, é terreno; o segundo homem é do céu. Como foi o primeiro homem, o terreno, tais são também os demais homens terrenos; e como é o homem celestial, tais também os celestiais. <b>I Coríntios 15:45-48</b>
+	</blockquote>
+	<p>Pelo nascimento natural (de carne e sangue), pertencemos a raça de Adão, estragada e inútil. Mas pelo novo nascimento nos tornamos participantes da raça celestial. Adão perdeu a imagem de Deus porque foi rebelde (<a data-verse="gn3:1-7" class="verse">Gênesis 3:1-7</a>). Jesus, que é a imagem do Deus invisível (<a data-verse="cl1:15" class="verse">Colossenses 1:15</a>), sempre fez a vontade do Pai (<a data-verse="jo4:34" class="verse">João 4:34</a>), e em tudo Lhe agradou (<a data-verse="jo8:29" class="verse">João 8:29</a>), foi obediente até a morte (<a data-verse="fp2:8" class="verse">Filipenses 2:8</a>).</p>
+
+	<p>Todo o homem que crê naquele que o Pai enviou (<a data-verse="jo6:29"	class="verse">João 6:29</a>), nega-se a si mesmo e toma a sua cruz (<a data-verse="mt16:24" class="verse">Mateus 16:24</a>), perde a sua vida (<a data-verse="mt16:25" class="verse">Mateus 16:25</a>), recebe o senhorio de Jesus Cristo (<a data-verse="rm10:9" class="verse">Romanos 10:9</a>) e se batiza em Jesus Cristo (<a data-verse="mc16:16" class="verse">Marcos 16:16</a>), este se torna uma nova criatura (<a data-verse="2co5:17" class="verse">II Coríntios 5:17</a>), recebe a natureza de Deus (<a data-verse="2pe1:4" class="verse">II Pedro 1:4</a>) e recebe a imagem daquele que o criou (<a data-verse="cl3:10" class="verse">Colossenses 3:10</a>). Toda a glória do plano de Deus havia se perdido no pecado. Mas Deus Pai não desistiu. Qual a sua esperança?</p>
+	
+	<blockquote>Aos quais Deus quis fazer conhecer quais são as riquezas da glória deste mistério entre os gentios, que é Cristo em vós, esperança da glória. <b>Colossenses 1:27</b>
+	</blockquote></div>
+</div>
+
+<div class="article" id="chapter7">
+	<h3>A salvação é um meio e não um fim</h3>
+	<p>A obra redentora de Cristo Jesus é algo tão tremendo, tão maravilhoso, que corremos o risco de vê-la como se fosse o todo. Esta salvação é tão grandiosa que temos a tendência de confundi-la com o próprio propósito de Deus. Mas não é assim.	Jesus Cristo, o admirável Filho de Deus, com sua obra redentora, deu uma nova vida ao homem, restaurando-lhe a comunhão com o Pai. E também deu a Deus os recursos de infinita graça, para que ele continue com o seu plano eterno. A redenção efetuada por Jesus Cristo e encarnada pela igreja, é o meio para Deus restaurar todas as coisas, e assim concluir seu propósito.</p>
+
+	<p>A redenção nunca poderia ser um fim em si mesma, mas apenas um meio de graça para consertar um grande erro. Para Paulo, a redenção nunca foi o propósito de Deus. Ele entendia que o propósito de Deus era a família eterna (<a data-verse="ef1:4-5" class="verse">Efésios 1:4-5</a> e <a data-verse="rm8:28-29" class="verse">Romanos 8:28-29</a>). Uma família perfeita em Cristo (<a	data-verse="fp3:12-14" class="verse">Filipenses 3:12-14</a>). Sua obra para o Senhor não consistia em buscar apenas a redenção do homem, mas em apresentar este homem a Deus, restaurado à imagem de Jesus Cristo (<a data-verse="cl1:28" class="verse">Colossenses 1:28</a>).</p>
+</div>
+
+<div class="article" id="chapter8">
+	<h3>Como se define o Propósito Eterno de Deus hoje?</h3>
+	<blockquote>Sabemos que todas as coisas cooperam para o bem daqueles que amam a Deus, daqueles que são chamados segundo o Seu propósito. Porquanto aos que de antemão conheceu, também os predestinou para serem conformes a imagem de Seu Filho, a fim de que Ele seja o primogênito entre muitos irmãos. <b>Romanos 8:28-29</b></blockquote>
+	<p>Este texto nos mostra com clareza que Deus quer uma família, de muitos filhos semelhantes a Jesus. Vejamos por etapas:</p>
+	<ol>
+		<li><b>Uma família:</b> Isto nos fala da unidade. Este é um requisito indispensável para o cumprimento do propósito de Deus. Embora isto não esteja enfatizado no texto acima (nem seria necessário), porque filhos a imagem de Jesus não podem ser brigões e facciosos, está claro em outras passagens como: <a data-verse="jo17:20-22" class="verse">João 17:20-22</a>; <a data-verse="1co1:10-12" class="verse">I Coríntios 1:10-12</a>; <a data-verse="1co3:1-4" class="verse">3:1-4</a>; <a data-verse="1co10:16-17" class="verse">10:16-17</a>; <a data-verse="ef2:14-16" class="verse">Efésios 2:14-16</a>; <a data-verse="ef3:15" class="verse">3:15</a>; <a data-verse="ef4:1-6" class="verse">4:1-6</a>, <a data-verse="ef4:12-16" class="verse">12-16</a>; <a data-verse="fp1:27" class="verse">Filipenses 1:27</a>; <a data-verse="fp2:1-4" class="verse">2:1-4</a>.</li>
+		<li><b>De muitos filhos:</b> Isto nos fala de multiplicação. Discípulos fazem discípulos, etc. (<a data-verse="mt28:18-20" class="verse">Mateus 28:18-20</a>).</li>
+		<li><b>Semelhantes a Jesus:</b> Isto nos fala da edificação. Não é suficiente que sejam muitos; é necessário que tenham qualidade de vida (<a data-verse="ef1:4-5" class="verse">Efésios 1:4-5</a>; <a data-verse="2co3:18" class="verse">II Coríntios 3:18</a>; <a data-verse="ef4:13" class="verse">Efésios 4:13</a>). Portanto, entendemos que o propósito de Deus envolve a multiplicação de vidas que vão ser edificadas em unidade, para crescerem até a estatura de Cristo Jesus.</li>
+	</ol>
+	<blockquote>Até que todos cheguemos à unidade da fé, e ao conhecimento do Filho de Deus, a homem perfeito, à medida da estatura completa de Cristo. <b>Efésios 4:13</b></blockquote>
+</div>
+
+<div class="article" id="chapter9">
+	<h3>Qual a nossa posição dentro deste Propósito?</h3>
+	<p>Aquilo que é um propósito no coração de Deus, para nós se constitui num chamado, numa vocação (<a data-verse="2tm1:8-9" class="verse">II Timóteo 1:8-9</a> e <a data-verse="rm8:28-29" class="verse">Romanos 8:28-29</a>). Devemos ter os olhos iluminados para compreender nosso chamamento, a fim de que o propósito eterno, seja para nós, muito mais do que um estudo de apostila (<a data-verse="ef1:18" class="verse">Efésios 1:18</a>).</p>
+	
+	<p>De uma maneira simples definimos a nossa vocação como um chamado para sermos participantes do propósito de Deus e cooperadores no seu cumprimento. Aquele que recebe o Propósito de Deus em seu coração, compreende o seu chamamento e torna-se prisioneiro desta vocação (<a data-verse="fp3:12-14" class="verse">Filipenses 3:12-14</a>).</p>
+
+	<p>Devemos andar de modo digno desta vocação (<a data-verse="ef4:1-3" class="verse">Efésios 4:1-3</a>) e esforçar-nos para confirmá-la (<a data-verse="2pe1:10" class="verse">II Pedro 1:10</a>).</p>
 </div>
