--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="js/velocity.min.js"></script>
-		<script type="text/javascript" src="js/hammer.min.js"></script>
+		<script type="text/javascript" src="js/jverse.js"></script>
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="shortcut icon" href="img/logo.png">
 		<title>Discipulado</title>
